try to have SecretVersion pruned prior to Secret

--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -3,6 +3,8 @@ apiVersion: secretsmanager.aws.upbound.io/v1beta1
 kind: SecretVersion
 metadata:
   name: {{ include "aws-secrets-manager-secret.fullname" . }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "-10"{{/* have SecretVersion pruned prior to Secret */}}
 spec:
   forProvider:
     region: {{ .Values.region }}
@@ -18,6 +20,8 @@ apiVersion: secretsmanager.aws.upbound.io/v1beta1
 kind: Secret
 metadata:
   name: {{ include "aws-secrets-manager-secret.fullname" . }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   deletionPolicy: Orphan
   forProvider:
