--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -4,7 +4,7 @@ kind: SecretVersion
 metadata:
   name: {{ include "aws-secrets-manager-secret.fullname" . }}
   annotations:
-    argocd.argoproj.io/sync-wave: "-10"{{/* have SecretVersion pruned prior to Secret */}}
+    argocd.argoproj.io/sync-wave: "10"{{/* have SecretVersion pruned prior to Secret */}}
 spec:
   forProvider:
     region: {{ .Values.region }}
@@ -21,7 +21,7 @@ kind: Secret
 metadata:
   name: {{ include "aws-secrets-manager-secret.fullname" . }}
   annotations:
-    argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/sync-wave: "5"{{/* have Secret deployed prior to Secret */}}
 spec:
   deletionPolicy: Orphan
   forProvider:
