--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,4 +1,4 @@
-name: demo-application merge action
+name: demo action
 
 on:
   push:
@@ -10,6 +10,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  production_build:
+  get_pr_info:
     uses: ./.github/workflows/get-current-pr.yml
     secrets: inherit
