test github.event.head for merge to master

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,3 +13,5 @@ jobs:
   get_pr_info:
     uses: ./.github/workflows/get-current-pr.yml
     secrets: inherit
+    with:
+      ref: ${{ github.event.head }}
