--- a/.github/workflows/get-current-pr.yml
+++ b/.github/workflows/get-current-pr.yml
@@ -49,6 +49,10 @@ jobs:
         run: |
           set -euo pipefail
 
+          if [[ "${{ inputs.ref }}" == "master" ]]; then
+            echo "The default for 'inputs.ref' does work!"
+          fi
+
           if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/master" ]]; then
             if [[ -n "${{ env.MERGED_PR_BRANCH }}" && -n "${{ env.MERGED_PR_LAST_COMMIT }}" ]]; then
               # PR info is available
