test github.event.head for merge to master

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -14,4 +14,4 @@ jobs:
     uses: ./.github/workflows/get-current-pr.yml
     secrets: inherit
     with:
-      ref: ${{ github.event.head }}
+      ref: ${{ github.event.head }} # will be null for PR merge to master events
